--- a/JohnnyKadai6/Base.lproj/Main.storyboard
+++ b/JohnnyKadai6/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minValue="1" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="jwT-6u-pTo">
                                         <rect key="frame" x="-2" y="46" width="386" height="31"/>
                                         <connections>
-                                            <action selector="AdjustTheValue:" destination="BYZ-38-t0r" eventType="valueChanged" id="o2S-nh-cLu"/>
+                                            <action selector="adjustTheValue:" destination="BYZ-38-t0r" eventType="valueChanged" id="dmM-D1-qSA"/>
                                         </connections>
                                     </slider>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="mO7-7w-PHC">
